release: align freeway-ext with core 1.5.1
Version: parent freeway-parent and freeway.version move to 1.5.1 (root
and all five adapter modules); CHANGELOG gains the 1.5.1 section.

No adapter API changes required: core 1.5.1 is fully backward
compatible. Adapter knobs now resolve through the injected cascade
SymbolSource (both HTTP engines, Hikari leak-detection) with a
system-properties fallback for direct construction; HikariPool gains
the foreign-release guard; idioms modernized (explicit imports,
platform thread factories, floorMod buckets).

Verified: full reactor build + tests against core 1.5.1 (undertow 22,
jetty 21, kafka 37 (4 skipped), hikari 12 - green), spotless clean.